# Game-Of-Life

./: CMakeLists.txt  README.md
src/: Cell.cpp  Cell.h  World.cpp  World.h  main.cpp
